--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,14 @@
           http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 	<display-name>Servlet 3.0 Web Application</display-name>
+	
+	  <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/config/root-context.xml</param-value>
+    </context-param>
+    
+    
 	<servlet>
 		<servlet-name>fitTrackerServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -18,9 +26,14 @@
 	</servlet-mapping>
 
 
-	<servlet-mapping>
-	<servlet-name>fitTrackerServlet</servlet-name>
-	<url-pattern>/</url-pattern>
+<!-- 	<servlet-mapping> -->
+<!-- 	<servlet-name>fitTrackerServlet</servlet-name> -->
+<!-- 	<url-pattern>/</url-pattern> -->
+<!-- 	</servlet-mapping> -->
+	
+		<servlet-mapping>
+		<servlet-name>fitTrackerServlet</servlet-name>
+		<url-pattern>*.pdf</url-pattern>
 	</servlet-mapping>
 
 	<display-name>Archetype Created Web Application</display-name>
