--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,18 @@
 	<name>fitnessApp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
-<!-- 	<profiles> -->
-<!-- 		<profile> -->
-<!-- 			<id>default</id> -->
-<!-- 			<properties> -->
-<!-- 				<env>default</env> -->
-<!-- 				<spring.version>4.1.4.RELEASE</spring.version> -->
-<!-- 			</properties> -->
-<!-- 			<activation> -->
-<!-- 				<activeByDefault>true</activeByDefault> -->
-<!-- 			</activation> -->
-<!-- 		</profile> -->
-<!-- 	</profiles> -->
+	<!-- <profiles> -->
+	<!-- <profile> -->
+	<!-- <id>default</id> -->
+	<!-- <properties> -->
+	<!-- <env>default</env> -->
+	<!-- <spring.version>4.1.4.RELEASE</spring.version> -->
+	<!-- </properties> -->
+	<!-- <activation> -->
+	<!-- <activeByDefault>true</activeByDefault> -->
+	<!-- </activation> -->
+	<!-- </profile> -->
+	<!-- </profiles> -->
 
 
 	<dependencies>
@@ -58,18 +58,18 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.2.0.Alpha1</version>
 		</dependency>
-		<!-- jackson for json mapping -->
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-		<!-- oxm jackson for xml mapping -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 			<version>4.1.4.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
 	</dependencies>
 
 
