--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
           http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 	<display-name>Servlet 3.0 Web Application</display-name>
-	
-	  <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/config/root-context.xml</param-value>
-    </context-param>
-    
-    
+
+	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/config/root-context.xml</param-value>
+	</context-param>
+
+
 	<servlet>
 		<servlet-name>fitTrackerServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -18,23 +19,38 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/config/servlet-config.xml</param-value>
 		</init-param>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
+
+	<!-- <servlet> -->
+	<!-- <servlet-name>rest</servlet-name> -->
+	<!-- <servlet-class> -->
+	<!-- org.springframework.web.servlet.DispatcherServlet -->
+	<!-- </servlet-class> -->
+	<!-- <load-on-startup>1</load-on-startup> -->
+	<!-- </servlet> -->
+
 
 	<servlet-mapping>
 		<servlet-name>fitTrackerServlet</servlet-name>
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
 
-
-<!-- 	<servlet-mapping> -->
-<!-- 	<servlet-name>fitTrackerServlet</servlet-name> -->
-<!-- 	<url-pattern>/</url-pattern> -->
-<!-- 	</servlet-mapping> -->
-	
-		<servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>fitTrackerServlet</servlet-name>
 		<url-pattern>*.pdf</url-pattern>
 	</servlet-mapping>
+
+	<!-- <servlet-mapping> -->
+	<!-- <servlet-name>fitTrackerServlet</servlet-name> -->
+	<!-- <url-pattern>/rest/*</url-pattern> -->
+	<!-- </servlet-mapping> -->
+
+	<servlet-mapping>
+		<servlet-name>fitTrackerServlet</servlet-name>
+		<url-pattern>/*</url-pattern>
+	</servlet-mapping>
+
 
 	<display-name>Archetype Created Web Application</display-name>
 </web-app>
