--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,25 +11,24 @@
 		<param-value>/WEB-INF/config/root-context.xml</param-value>
 	</context-param>
 
-
 	<servlet>
 		<servlet-name>fitTrackerServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/config/servlet-config.xml</param-value>
+			<param-value>/WEB-INF/config/spring-mvc-config.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<!-- <servlet> -->
-	<!-- <servlet-name>rest</servlet-name> -->
-	<!-- <servlet-class> -->
-	<!-- org.springframework.web.servlet.DispatcherServlet -->
-	<!-- </servlet-class> -->
-	<!-- <load-on-startup>1</load-on-startup> -->
-	<!-- </servlet> -->
 
+	<!-- ************************Servlet Mappings********************** -->
+
+		<servlet-mapping>
+		<servlet-name>fitTrackerServlet</servlet-name>
+		<url-pattern>/rest/activities/</url-pattern>
+	</servlet-mapping>
+	
 
 	<servlet-mapping>
 		<servlet-name>fitTrackerServlet</servlet-name>
@@ -40,17 +39,6 @@
 		<servlet-name>fitTrackerServlet</servlet-name>
 		<url-pattern>*.pdf</url-pattern>
 	</servlet-mapping>
-
-	<!-- <servlet-mapping> -->
-	<!-- <servlet-name>fitTrackerServlet</servlet-name> -->
-	<!-- <url-pattern>/rest/*</url-pattern> -->
-	<!-- </servlet-mapping> -->
-
-	<servlet-mapping>
-		<servlet-name>fitTrackerServlet</servlet-name>
-		<url-pattern>/*</url-pattern>
-	</servlet-mapping>
-
 
 	<display-name>Archetype Created Web Application</display-name>
 </web-app>
