--- a/pom.xml
+++ b/pom.xml
@@ -8,27 +8,21 @@
 	<name>fitnessApp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
-	<!-- <profiles> -->
-	<!-- <profile> -->
-	<!-- <id>default</id> -->
-	<!-- <properties> -->
-	<!-- <env>default</env> -->
-	<!-- <spring.version>4.1.4.RELEASE</spring.version> -->
-	<!-- </properties> -->
-	<!-- <activation> -->
-	<!-- <activeByDefault>true</activeByDefault> -->
-	<!-- </activation> -->
-	<!-- </profile> -->
-	<!-- </profiles> -->
+	<profiles>
+	<profile>
+	<id>default</id>
+	<properties>
+	<env>default</env>
+	<spring.version>4.1.4.RELEASE</spring.version>
+	</properties>
+	<activation>
+	<activeByDefault>true</activeByDefault>
+	</activation>
+	</profile>
+	</profiles>
 
 
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
@@ -38,7 +32,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>4.1.4.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -52,7 +46,7 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- for fields validation , not to be cofused with hibernate databse -->
+		<!-- for fields validation , not to be confused with hibernate databse -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
@@ -61,15 +55,37 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
-			<version>4.1.4.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.5.1</version>
 		</dependency>
+		
+<!-- Spring AOP + AspectJ   for transaction and security -->
 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.5</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 
