Aggiunta la configurazione di resources specifica per images pom per jpa e hibernate corretto il controller per menu delle attivita'

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,11 +24,11 @@
 
 	<!-- ************************Servlet Mappings********************** -->
 
-		<servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>fitTrackerServlet</servlet-name>
-		<url-pattern>/rest/activities/</url-pattern>
+		<url-pattern>/activities/</url-pattern>
 	</servlet-mapping>
-	
+
 
 	<servlet-mapping>
 		<servlet-name>fitTrackerServlet</servlet-name>
@@ -38,6 +38,11 @@
 	<servlet-mapping>
 		<servlet-name>fitTrackerServlet</servlet-name>
 		<url-pattern>*.pdf</url-pattern>
+	</servlet-mapping>
+	
+		<servlet-mapping>
+		<servlet-name>fitTrackerServlet</servlet-name>
+		<url-pattern>*.jpg</url-pattern>
 	</servlet-mapping>
 
 	<display-name>Archetype Created Web Application</display-name>
