--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- for fields validation , not to be confused with hibernate databse -->
+		<!--++++++++++ for fields validation , not to be confused with hibernate databse ++++++++++++++++++++-->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
@@ -63,7 +63,7 @@
 			<version>2.5.1</version>
 		</dependency>
 
-		<!-- Spring AOP + AspectJ for transaction and security -->
+		<!-- +++++++Spring AOP + AspectJ for transaction and security +++++++-->
 
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -91,9 +91,34 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-
+		<!-- ++++++++++++++for JPA and Hibernate +++++++++++++++-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.34</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.3.8.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>jta</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.1.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>4.1.4.RELEASE</version>
+		</dependency>
 	</dependencies>
-
+	<!-- ++++++++++++++++++++++++++++++++++++++++ -->
 
 	<build>
 
