--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,8 @@
 		<param-value>/WEB-INF/config/root-context.xml</param-value>
 	</context-param>
 
+
+	<!-- The front controller of this Spring Web application, responsible for handling all application requests -->
 	<servlet>
 		<servlet-name>fitTrackerServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -45,16 +47,17 @@
 		<url-pattern>*.jpg</url-pattern>
 	</servlet-mapping>
 	<!-- ************************Listener class for JPA ********************** -->
-
-<!-- We are going to load this file in place of the standard persistence.xml -->
+	<!-- needed for ContextLoaderListener -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:/jpaContext.xml</param-value>
 	</context-param>
 
+	<!-- Bootstraps the root web application context before servlet initialization -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-<!-- 	+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+
+	<!-- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 	<display-name>Archetype Created Web Application</display-name>
 </web-app>
