--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
 			<artifactId>xstream</artifactId>
 			<version>1.4.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.18</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<!-- ++++++++++++++++++++++++++++++++++++++++ -->
 
