--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,9 +21,15 @@
 
 	<servlet-mapping>
 		<servlet-name>fitTrackerServlet</servlet-name>
-		<url-pattern>/activities/</url-pattern>
+		<url-pattern>/rest/activities/</url-pattern>
+		<url-pattern>/rest/goals/</url-pattern>
 	</servlet-mapping>
 
+	<servlet-mapping>
+		<servlet-name>fitTrackerServlet</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
+	
 
 	<servlet-mapping>
 		<servlet-name>fitTrackerServlet</servlet-name>
@@ -53,16 +59,16 @@
 
 	<!-- ++++++++++++++++++To enlarge the scope of JPA Session up to the controller++++++++++++++++++++++ -->
 
-	<filter>
-		<filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
-		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
-	</filter>
+<!-- 	<filter> -->
+<!-- 		<filter-name>SpringOpenEntityManagerInViewFilter</filter-name> -->
+<!-- 		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class> -->
+<!-- 	</filter> -->
 
-	<filter-mapping>
-		<filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
-	
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>SpringOpenEntityManagerInViewFilter</filter-name> -->
+<!-- 		<url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
+
+
 	<display-name>Archetype Created Web Application</display-name>
 </web-app>
